# zero-trust-policy-recommendation-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DEPLOYMENT.md  ROADMAP.md  THREAT_MODEL.md
src/: app.py  main.py
tests/: README.md  test_api.py  test_smoke.py
